# Chess-AI

./: Board.cpp  Board.h  Bot.cpp  Bot.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp  main.h
